--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -1,6 +1,9 @@
 {
   "name": "webapp",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": "Daniel Jancar",
+  "license": "MIT",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +11,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
     "@angular/cdk": "^18.0.5",
